force-app/main/default/objects/Daily_Pre_Start__c/Daily_Pre_Start__c.object-meta.xml
<CustomObject>
    <label>Daily Pre-Start</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Daily Pre-Start #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Pre-Starts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>