force-app/main/default/objects/Daily_Pre_Start__c/fields/Active_Driver__c.field-meta.xml
<CustomField>
    <fullName>Active_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Driver</label>
    <referenceTo>Active_Driver__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts</relationshipLabel>
    <relationshipName>Daily_Pre_Starts</relationshipName>
    <type>Lookup</type>
</CustomField>