force-app/main/default/objects/Daily_Pre_Start__c/fields/Asset_Unit_formula__c.field-meta.xml
<CustomField>
    <fullName>Asset_Unit_formula__c</fullName>
    <formula>IF(ISBLANK(PM_Vehicle__r.Unit__c), &apos;&apos;,  PM_Vehicle__r.Unit__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Unit</label>
    <type>Text</type>
</CustomField>