force-app/main/default/objects/Daily_Pre_Start__c/fields/Brakes__c.field-meta.xml
<CustomField>
    <fullName>Brakes__c</fullName>
    <inlineHelpText>Check that brake failure indicators are in working order. 
Check that pressure/vacuum gauges are working. 
Drain contaminants from air tanks.
Roll check/tug test.</inlineHelpText>
    <label>Brake Checks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>