force-app/main/default/objects/Daily_Pre_Start__c/fields/Description_of_Fault__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Fault__c</fullName>
    <label>Description of Fault</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>