force-app/main/default/objects/Daily_Pre_Start__c/fields/Dollies_Check_Done__c.field-meta.xml
<CustomField>
    <fullName>Dollies_Check_Done__c</fullName>
    <inlineHelpText>Check security and integrity of Tow couplings and drawbars. Ensure ring feeder and Dolly towing eye are engaged (where used)</inlineHelpText>
    <label>Dollies Check Done</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>