force-app/main/default/objects/Daily_Pre_Start__c/fields/Dolly_2__c.field-meta.xml
<CustomField>
    <fullName>Dolly_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dolly 2</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts (Dolly 2)</relationshipLabel>
    <relationshipName>Daily_Pre_Starts3</relationshipName>
    <type>Lookup</type>
</CustomField>