force-app/main/default/objects/Daily_Pre_Start__c/fields/Dolly__c.field-meta.xml
<CustomField>
    <fullName>Dolly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dolly 1</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts (Dolly 1)</relationshipLabel>
    <relationshipName>Daily_Pre_Starts2</relationshipName>
    <type>Lookup</type>
</CustomField>