force-app/main/default/objects/Daily_Pre_Start__c/fields/Driver_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver Assignment</label>
    <referenceTo>Driver_Assignment__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts</relationshipLabel>
    <relationshipName>Daily_Pre_Starts</relationshipName>
    <type>Lookup</type>
</CustomField>