force-app/main/default/objects/Daily_Pre_Start__c/fields/Driver_Self_Check__c.field-meta.xml
<CustomField>
    <fullName>Driver_Self_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is your Licence Valid. Are you fit and ready to drive</inlineHelpText>
    <label>Driver Self Check</label>
    <type>Checkbox</type>
</CustomField>