force-app/main/default/objects/Daily_Pre_Start__c/fields/Extinguisher_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Extinguisher_Expiry_Date__c</fullName>
    <label>Extinguisher Expiry Date</label>
    <type>Date</type>
</CustomField>