force-app/main/default/objects/Daily_Pre_Start__c/fields/Fault_Grading__c.field-meta.xml
<CustomField>
    <fullName>Fault_Grading__c</fullName>
    <label>Fault Grading</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N - Normal</fullName>
            </value>
            <value>
                <fullName>U - Urgent</fullName>
            </value>
            <value>
                <fullName>NR - Not Road worthy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>