force-app/main/default/objects/Daily_Pre_Start__c/fields/Fault_Report__c.field-meta.xml
<CustomField>
    <fullName>Fault_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fault Reported</label>
    <type>Checkbox</type>
</CustomField>