force-app/main/default/objects/Daily_Pre_Start__c/fields/Fault_Reported_To__c.field-meta.xml
<CustomField>
    <fullName>Fault_Reported_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fault Reported To</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Vehicle_Pre_Starts1</relationshipName>
    <type>Lookup</type>
</CustomField>