force-app/main/default/objects/Daily_Pre_Start__c/fields/Fire_Extinguisher__c.field-meta.xml
<CustomField>
    <fullName>Fire_Extinguisher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire Extinguisher</label>
    <type>Checkbox</type>
</CustomField>