force-app/main/default/objects/Daily_Pre_Start__c/fields/First_Aid_Kit__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Aid Kit</label>
    <type>Checkbox</type>
</CustomField>