force-app/main/default/objects/Daily_Pre_Start__c/fields/Hauling_Trailing_Equipment_Roadworthy__c.field-meta.xml
<CustomField>
    <fullName>Hauling_Trailing_Equipment_Roadworthy__c</fullName>
    <label>Hauling &amp; Trailing Equipment Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>