force-app/main/default/objects/Daily_Pre_Start__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>By completing this pre-start inspection, I the driver, certify that the vehicle is safe to the limits of the inspection prior to the vehicle being used on a road.</inlineHelpText>
    <label>Inspection By</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts (Driver)</relationshipLabel>
    <relationshipName>Vehicle_Pre_Starts</relationshipName>
    <type>Lookup</type>
</CustomField>