force-app/main/default/objects/Daily_Pre_Start__c/fields/Lights_and_reflectors__c.field-meta.xml
<CustomField>
    <fullName>Lights_and_reflectors__c</fullName>
    <inlineHelpText>Check that all lights, including clearance lights (where applicable) are fitted and operating.</inlineHelpText>
    <label>Lights/Reflectors Checks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>