force-app/main/default/objects/Daily_Pre_Start__c/fields/Load_Restraint__c.field-meta.xml
<CustomField>
    <fullName>Load_Restraint__c</fullName>
    <inlineHelpText>Check that binders and chains are secure and in good condition. Check headboards &amp; tail gates are secure. Check for structural cracks. Check turntables are correctly hooked up (tug test). Check ring feeder and dolly towing eye are engaged (where used).</inlineHelpText>
    <label>Load Restraint Checks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>