force-app/main/default/objects/Daily_Pre_Start__c/fields/NHVAS_Label_and_Intercept_Report_Book_C__c.field-meta.xml
<CustomField>
    <fullName>NHVAS_Label_and_Intercept_Report_Book_C__c</fullName>
    <inlineHelpText>Label fitted, not obscured and free of damage, Intercept report book is kept with vehicle</inlineHelpText>
    <label>NHVAS Label Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>