force-app/main/default/objects/Daily_Pre_Start__c/fields/Number_Plates__c.field-meta.xml
<CustomField>
    <fullName>Number_Plates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Number Plates</label>
    <type>Checkbox</type>
</CustomField>