force-app/main/default/objects/Daily_Pre_Start__c/fields/PM_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>PM_Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts</relationshipLabel>
    <relationshipName>Vehicle_Pre_Starts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>