force-app/main/default/objects/Daily_Pre_Start__c/fields/Schedular__c.field-meta.xml
<CustomField>
    <fullName>Schedular__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedular #</label>
    <referenceTo>Truck_Dockets__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts</relationshipLabel>
    <relationshipName>Daily_Pre_Starts</relationshipName>
    <type>Lookup</type>
</CustomField>