force-app/main/default/objects/Daily_Pre_Start__c/fields/SR__c.field-meta.xml
<CustomField>
    <fullName>SR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SR #</label>
    <referenceTo>ServicesReceived__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts</relationshipLabel>
    <relationshipName>Daily_Pre_Starts</relationshipName>
    <type>Lookup</type>
</CustomField>