force-app/main/default/objects/Daily_Pre_Start__c/fields/Stickers__c.field-meta.xml
<CustomField>
    <fullName>Stickers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Registration Sticker, NHVR Stickers</inlineHelpText>
    <label>Stickers</label>
    <type>Checkbox</type>
</CustomField>