force-app/main/default/objects/Daily_Pre_Start__c/fields/Structure_Body_Fluid_Systems__c.field-meta.xml
<CustomField>
    <fullName>Structure_Body_Fluid_Systems__c</fullName>
    <inlineHelpText>Check that all panels and easily visible structural members are secure and free from cracks. Check for any fluid leaks, (oil, fuel, refrigerant, coolant, hydraulic fluid, brake fluid and air)</inlineHelpText>
    <label>Structure/Body/Fluid Checks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>