force-app/main/default/objects/Daily_Pre_Start__c/fields/Trailer_1__c.field-meta.xml
<CustomField>
    <fullName>Trailer_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trailer 1</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts (Trailer 1)</relationshipLabel>
    <relationshipName>Daily_Pre_Starts</relationshipName>
    <type>Lookup</type>
</CustomField>