force-app/main/default/objects/Daily_Pre_Start__c/fields/Trailer_1_Odometer__c.field-meta.xml
<CustomField>
    <fullName>Trailer_1_Odometer__c</fullName>
    <label>Trailer 1 Odometer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>