force-app/main/default/objects/Daily_Pre_Start__c/fields/Trailer_2__c.field-meta.xml
<CustomField>
    <fullName>Trailer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trailer 2</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts (Trailer 2)</relationshipLabel>
    <relationshipName>Daily_Pre_Starts1</relationshipName>
    <type>Lookup</type>
</CustomField>