force-app/main/default/objects/Daily_Pre_Start__c/fields/Trailer_3__c.field-meta.xml
<CustomField>
    <fullName>Trailer_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trailer 3</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Daily Pre-Starts (Trailer 3)</relationshipLabel>
    <relationshipName>Daily_Pre_Starts4</relationshipName>
    <type>Lookup</type>
</CustomField>