force-app/main/default/objects/Daily_Pre_Start__c/fields/Trailer_Checks_Done__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Checks_Done__c</fullName>
    <inlineHelpText>Check security and integrity of tow couplings -  turntables/king pin. Ensure correctly hooked up (Tug Test)</inlineHelpText>
    <label>Trailer Checks Done</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>