force-app/main/default/objects/Daily_Pre_Start__c/fields/Vehicle_Emission_System_Components__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Emission_System_Components__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Emission System/Components</label>
    <type>Checkbox</type>
</CustomField>