force-app/main/default/objects/Daily_Pre_Start__c/fields/Wheels_Tyres__c.field-meta.xml
<CustomField>
    <fullName>Wheels_Tyres__c</fullName>
    <inlineHelpText>Check tyres are adequately inflated, check tyre tread, depth and integrity, check that wheels are secure, check suspension components, springs, airbags, shock absorbers</inlineHelpText>
    <label>Wheels/Tyre Checks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>