force-app/main/default/objects/Daily_Pre_Start__c/fields/Windscreen_Mirrors_Wipers__c.field-meta.xml
<CustomField>
    <fullName>Windscreen_Mirrors_Wipers__c</fullName>
    <inlineHelpText>Check all windows and mirrors for any damage or grime, and ensure they are secure. 
Check windscreen wipers and washers operate effectively ensuring clear forward vision.</inlineHelpText>
    <label>Windscreen/Mirrors/Wiper Checks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>