force-app/main/default/objects/Daily_Pre_Start__c/validationRules/Required_DriverAssignment.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_DriverAssignment</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   ISBLANK( Driver_Assignment__c ),
   NOT( ISCHANGED( Active_Driver__c ) )
)</errorConditionFormula>
    <errorDisplayField>Driver_Assignment__c</errorDisplayField>
    <errorMessage>The Driver Assignment Number is required.</errorMessage>
</ValidationRule>