force-app/main/default/objects/Daily_Pre_Start__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PM_Vehicle__c</columns>
    <columns>Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Driver_Assignment__c</columns>
    <columns>Status__c</columns>
    <columns>Asset_Driver_Assignment__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>