force-app/main/default/objects/Daily_Pre_Start__c/listViews/By_asset.listView-meta.xml
<ListView>
    <fullName>By_asset</fullName>
    <columns>NAME</columns>
    <columns>PM_Vehicle__c</columns>
    <columns>Date__c</columns>
    <columns>Driver_Assignment__c</columns>
    <columns>Status__c</columns>
    <columns>Asset_Driver_Assignment__c</columns>
    <columns>Inspection__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PM_Vehicle__c</field>
        <operation>contains</operation>
        <value>u14</value>
    </filters>
    <label>By asset</label>
</ListView>