force-app/main/default/objects/Daily_Pre_Start__c/listViews/Daily_Pre_Starts_QLD.listView-meta.xml
<ListView>
    <fullName>Daily_Pre_Starts_QLD</fullName>
    <columns>NAME</columns>
    <columns>Asset_Unit_formula__c</columns>
    <columns>PM_Vehicle__c</columns>
    <columns>Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Driver_Assignment__c</columns>
    <columns>Status__c</columns>
    <columns>Asset_Driver_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>4/22/2024</value>
    </filters>
    <filters>
        <field>Asset_Unit_formula__c</field>
        <operation>equals</operation>
        <value>Transport - Roma,Rig 22,Rig 24,Rig 26,Rig 8,Rig 30,Rig 28,Rig 32</value>
    </filters>
    <label>Daily Pre-Starts | QLD</label>
</ListView>