force-app/main/default/objects/Daily_Pre_Start__c/listViews/David_Whiley.listView-meta.xml
<ListView>
    <fullName>David_Whiley</fullName>
    <columns>NAME</columns>
    <columns>PM_Vehicle__c</columns>
    <columns>Date__c</columns>
    <columns>Driver_Assignment__c</columns>
    <columns>Inspection__c</columns>
    <columns>Status__c</columns>
    <columns>Asset_Driver_Assignment__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>5/6/2023</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>whiley</value>
    </filters>
    <label>David Whiley</label>
</ListView>