force-app/main/default/objects/Daily_Pre_Start__c/listViews/My_Open_Daily_Pre_starts.listView-meta.xml
<ListView>
    <fullName>My_Open_Daily_Pre_starts</fullName>
    <columns>NAME</columns>
    <columns>PM_Vehicle__c</columns>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>My Open Daily Pre-starts</label>
</ListView>